# JaxMARL

./: pyproject.toml
baselines/IPPO/: ippo_cnn_overcooked.py
jaxmarl/environments/: __init__.py
jaxmarl/environments/jaxnav/: jaxnav_env.py
jaxmarl/environments/jaxnav/maps/: grid_map.py  map.py
tests/robotarium/: test_jaxrobotarium.py
