[project]
name = "jaxmarl"
readme = "README.md"
description = "Multi-Agent Reinforcement Learning with JAX"
authors = [
    {name = "Foerster Lab for AI Research", email = "arutherford@robots.ox.ac.uk"},
  ]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "jax",
  "jaxlib",
  "flax",
  "safetensors",
  "chex",
  "brax",
  "mujoco",
  "matplotlib",
  "pillow",
  "scipy",
  "gymnax",
  "wandb",
  "pettingzoo",
  "imageio>=2.37.3",
  "jaxrobotarium",
  "robotarium-python-simulator", # Changed from rps-jax
  "warp>=1.0.4",
  "warp-lang>=1.12.0",
]

[project.optional-dependencies]
algs = [
    "optax",
    "distrax",
    "flashbax",
    "hydra-core",
    "omegaconf",
    "tqdm",
]
cuda12 = ["jax[cuda12]"]

[dependency-groups]
dev = [
  "pytest",
  "pygame",
]

[tool.uv.sources]
jaxrobotarium = { path = "jaxmarl/environments/robotarium", editable = true }
robotarium-python-simulator = { path = "jaxmarl/environments/robotarium/jaxrobotarium/robotarium_python_simulator", editable = true }

[project.urls]
"Homepage" = "https://github.com/FLAIROx/JaxMARL"
"Bug Tracker" = "https://github.com/FLAIROx/JaxMARL/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['jaxmarl*']

[tool.setuptools.dynamic]
version = {attr = "jaxmarl.__version__"}

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "jaxmarl/environments/robotarium/jaxrobotarium",
  "jaxmarl/environments/robotarium/jaxrobotarium/robotarium_python_simulator"
]

